apps/ssp/overlays/staging/database-migration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssp
spec:
  template:
    spec:
      containers:
      - name: node
