apps/ssp/overlays/staging/ssp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssp
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: admin.contextsuite.dev
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET,HEAD,PUT,PATCH,POST,DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, x-authorization, x-requested-with"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Access-Control-Allow-Origin"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  rules:
    - host: admin.contextsuite.dev
      http:
        paths:
          - backend:
              service:
                name: ssp
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - admin.contextsuite.dev
      secretName: ssp-contextsuite-dev-tls
